--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -4,7 +4,6 @@
   min-height: 1rem;
   margin-bottom: 10px;
   background-color: transparent;
-  overflow-x: auto
 }
 
 
